# component-fast2flow

./: .gitignore  Cargo.toml  Makefile  README.md  demo.sh
.github/workflows/: ci.yml  codeql.yml  dev-publish.yml
components/indexer/: Cargo.toml
components/indexer/src/: index.rs  lib.rs
components/matcher/: Cargo.toml
components/matcher/src/: bm25.rs  lib.rs  schema.rs
components/router/: Cargo.toml
components/router/src/: lib.rs  route.rs
docs/: API.md  README.md
packs/fast2flow/: README.md
scripts/: e2e.sh  setup-bundle.sh
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/wasm-runtime/: Cargo.toml
tests/wasm-runtime/src/: lib.rs
