[workspace]
resolver = "2"
members = [
    "components/indexer",
    "components/matcher",
    "components/router",
    "tests/e2e",
]

[workspace.package]
edition = "2024"
rust-version = "1.91"
license = "MIT"

[workspace.dependencies]
greentic-types = "0.4"
greentic-interfaces-guest = { version = "0.4", default-features = false, features = ["component-v0-6"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["alloc", "serde"] }

[patch.crates-io]
greentic-types = { path = "../greentic-types" }
greentic-interfaces-guest = { path = "../greentic-interfaces/crates/greentic-interfaces-guest" }
