[package]
name = "fast2flow-e2e"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
indexer = { path = "../../components/indexer" }
matcher = { path = "../../components/matcher" }
router = { path = "../../components/router" }
greentic-types.workspace = true
serde_json.workspace = true
